--- a/index.html
+++ b/index.html
@@ -2,16 +2,16 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 
 <head>
-	<title>FLIP PDF PLUS</title>
+	<title>Cuisine Rasa</title>
 	<meta http-equiv="X-UA-Compatible" content="IE=Edge">
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
 	<meta name="apple-mobile-web-app-capable" content="yes" />
 	<meta name="monitor-signature" content="monitor:player:html5">
-	<meta name="keywords" content="" />
+	<meta name="keywords" content="Cuisine Rasa" />
 	<meta name="og:image" content="files/shot.png" />
 	<meta property="og:image" content="files/shot.png" />
-	<meta property="og:title" content="FLIP PDF PLUS" />
+	<meta property="og:title" content="Cuisine Rasa" />
 	<meta property="og:description" content="" />
 	<meta name="Description" content="">
 	<link rel="image_src" href="files/shot.png" />
