--- a/files/basic-html/page4.html
+++ b/files/basic-html/page4.html
@@ -130,7 +130,7 @@ function MM_swapImage() { //v3.0
           <td width="35%" style="display:none" align="right"><img src="images/content.png" width="19" height="16" /></td>
           <td width="31%" style="display:none" class="font1"><a href="${body.tocURL}">Table of Contents</a></td>
           <td width="6%"><img src="images/view.png" width="19" height="16" /></td>
-          <td width="28%" class="font1"><a href="../../index.html#p=4">View Full Version</a></td>
+          <td width="28%" class="font1"><a href="../../wira.html#p=4">View Full Version</a></td>
         </tr>
       </table>
     </div>
@@ -143,7 +143,7 @@ function MM_swapImage() { //v3.0
      <div id="content-middle">
       <div class="text-container">
           <div class="use-as-video cc-float-fix">
-            <a style="text-decoration: none;" href="../../index.html#p=4"><img src="../thumb/4.jpg" /></a>
+            <a style="text-decoration: none;" href="../../wira.html#p=4"><img src="../thumb/4.jpg" /></a>
           </div>
           <p class="use-as-video-title"></p>
           <pre style="word-break:break-all;"><code><p class="use-as-video-title"></p>
@@ -159,7 +159,7 @@ function MM_swapImage() { //v3.0
            <tr>
              <td width="22%" height="44"><a href="page3.html"><img src="images/previous.png" width="26" height="19" id="Image2" onmouseover="MM_swapImage('Image2','','images/previous2.png',1)" onmouseout="MM_swapImgRestore()" /></a></td>
              <td width="43%">
-             	&nbsp;&nbsp;&nbsp;<a href="page1.html">1</a>&nbsp;&nbsp;&nbsp;<a href="page2.html">2</a>&nbsp;&nbsp;&nbsp;<a href="page3.html">3</a>&nbsp;&nbsp;&nbsp;<a href="page4.html">4</a>&nbsp;&nbsp;&nbsp;<a href="page5.html">5</a>
+             	&nbsp;&nbsp;&nbsp;<a href="page1.html">1</a>&nbsp;&nbsp;&nbsp;<a href="page2.html">2</a>&nbsp;&nbsp;&nbsp;<a href="page3.html">3</a>
              </td>
              <td width="35%"><a href="page5.html"><img src="images/next.png" width="26" height="19" id="Image1" onmouseover="MM_swapImage('Image1','','images/next2.png',1)" onmouseout="MM_swapImgRestore()" /></a></td>
            </tr>
